<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,save" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#9F9B9B"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsTop" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/ic_save_48" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="stopEdit,stopEditText,stopEditTitle,editPencil" />

    <TextView
        android:id="@+id/stopEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toStartOf="@id/stopEdit"
        app:layout_constraintStart_toEndOf="@id/editPencil"
        app:layout_constraintTop_toBottomOf="@id/stopEditTitle"
        tools:text="@sample/posts.json/data/content" />

    <TextView
        android:id="@+id/stopEditTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:text="@string/editing"
        app:layout_constraintBottom_toTopOf="@id/stopEditText"
        app:layout_constraintEnd_toStartOf="@id/stopEdit"
        app:layout_constraintStart_toEndOf="@id/editPencil"
        app:layout_constraintTop_toTopOf="@id/stopEdit" />

    <ImageButton
        android:id="@+id/stopEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@android:color/background_light"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stopEditText"
        app:srcCompat="@drawable/ic_baseline_cancel_48" />

    <ImageButton
        android:id="@+id/editPencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@android:color/background_light"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toStartOf="@id/stopEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_48" />


</androidx.constraintlayout.widget.ConstraintLayout>

